# synth

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: beep.h  notes.h  synth.h
